Changes for 3.2.4rc1

New features:

Bug fixes:
..F....... [ZBX-11642] fixed undefined index on Problem page with disabled guest user (Ivo)
........S. [ZBX-11635] fixed possible deadlocks when removing obsolete VMWare services (Sergejs)
..F....... [ZBX-11661] prevented requesting all screens in slide show when slide show screens are deleted (Cemeris)
..F....... [ZBX-11527] fixed displaying maintenance icon for trigger element in maps (Cemeris)
.......PS. [ZBX-11481] fixed resolving macros for ip and dns fields in interfaces that are linked to main interface with {HOST.IP} and {HOST.DNS} macros (Sergejs)
........S. [ZBX-11628] fixed global regexps to be extracted from log.count[] and logrt.count[] keys (vso)
A.F....... [ZBX-11482] improved performance for getting last value of web items by limiting query results for values in last 24h; thanks to D.Spindel Ljungmark for patch (Cemeris)
A......... [ZBX-11545] fixed dependency validation and update when trigger expression is changed (Gunars)
..F....... [ZBX-11538] fixed event acknowledgement in screens and dashboard widgets when last event is a recovery event (Gunars)
.......PS. [ZBX-11630] added escaping '"', ''', '&', '<' and '>' characters in SOAP XML for VMware requests (Sergejs)
.......PS. [ZBX-11525] ensured unique value timestamps (clock, ns) from active agents and senders (dimir)
........S. [ZBX-11558] fixed removing trigger dependencies for triggers that are created from LLD prototypes (viktors)
..F....... [ZBX-11385] fixed interfaces displaying in host inventory page (Oleg, Pavel)
...G...PS. [ZBX-11101] fixed potential crash in case of failure in zbx_tls_connect() with mbed TLS (gleb)
...G...PS. [ZBX-11101] fixed compilation warnings regarding gnutls_transport_set_ptr() with GnuTLS (asaveljevs, gleb)
...G...PS. [ZBX-11101] fixed certificates with empty issuer and subject fields being rejected with OpenSSL (asaveljevs, gleb)